syntax = "proto3";
package meta;


message QueryResponse{
  bool success = 1;
  string error = 2;
}